<resources>
    <string name="app_name">WanAndroid</string>
    <string name="home">首页</string>
    <string name="category">知识体系</string>
    <string name="navigation">导航</string>
    <string name="wechat_author">公众号</string>
    <string name="project">项目</string>
    <string name="set_to_top">置顶</string>
    <string name="QA">问答</string>
    <string name="article_category">%1$s/%2$s</string>
    <string name="loading">加载中&#8230;</string>
    <string name="fresh">新</string>
    <string name="fresh_project">最新项目</string>
    <string name="search_keyword">搜索关键词</string>
    <string name="collection">收藏</string>
    <string name="my_collection">我的收藏</string>
    <string name="todo">TODO清单</string>
    <string name="logout">退出登录</string>
    <string name="about">关于</string>
    <string name="article">文章</string>
    <string name="website">网站</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_repassword">请再次输入密码</string>
    <string name="twice_input_password_not_equal">两次输入的密码不同</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="no_account">还没账号？点击注册</string>
    <string name="had_account">已有账号？点击登录</string>
    <string name="click_again_to_exit">再点一次退出APP</string>
    <string name="visitor">游客</string>
    <string name="confirm_logout">确定退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="collect_success">已加入收藏</string>
    <string name="uncollect_success">已移出收藏</string>
    <string name="outer_article">站外文章</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="please_input_website_name">请输入网站名</string>
    <string name="please_input_website_link">请输入网站链接</string>
    <string name="operate_success">操作成功</string>
    <string name="website_name">网站名</string>
    <string name="link">链接</string>
    <string name="add_or_edit_website">添加、编辑收藏网站</string>
    <string name="add_outer_article">添加站外文章</string>
    <string name="please_input_article_title">请输入文章标题</string>
    <string name="please_input_article_link">请输入文章链接</string>
    <string name="please_input_article_author">请输入作者名</string>
    <string name="search_something">搜点啥？</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="hot_search">大家都在搜</string>
    <string name="common_website">常用网站</string>
    <string name="add_todo">添加TODO</string>
    <string name="edit_todo">编辑TODO</string>
    <string name="title">标题：</string>
    <string name="content">内容：</string>
    <string name="write_a_title">起个标题吧&#8230;</string>
    <string name="do_something">做点啥？</string>
    <string name="save_success">保存成功</string>
    <string name="please_input_title">请输入标题</string>
    <string name="tag">标签</string>
    <string name="priority">优先级</string>
    <string name="work">工作</string>
    <string name="life">生活</string>
    <string name="study">学习</string>
    <string name="entertainment">娱乐</string>
    <string name="high">高</string>
    <string name="medium">中</string>
    <string name="low">低</string>
    <string name="def">默认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="please_choose_todo_complete_time">请选择预计完成时间</string>
    <string name="complete_time">完成时间：%1$s</string>
    <string name="no_complete">未完成</string>
    <string name="completed">已完成</string>
    <string name="detail">详情</string>
    <string name="nothing_write">啥都没填写！</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="download_url_error">下载地址有错</string>
    <string name="downloading">正在下载：%1$.1f</string>
    <string name="download_finish">下载完成</string>
    <string name="download_error">下载出错</string>
    <string name="installing">正在安装</string>
    <string name="please_allow_permissions">请允许相关权限</string>

    <string name="swipe_pull_down_refresh">下拉刷新</string>
    <string name="swipe_refreshing">正在刷新&#8230;</string>
    <string name="swipe_release_to_refresh">释放刷新</string>
</resources>
