<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="todoVM"
            type="com.example.hzh.ktmvvm.viewmodel.TodoVM"/>
    </data>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlFooterTranslationViewId="@id/rvTodo"
        bind:isFinishGetData="@{todoVM.isFinish}"
        bind:noMoreData="@{todoVM.isOver}"
        bind:refreshOrLoadMore="@{todoVM}">

        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp"/>

                    <CheckBox
                        android:id="@+id/cbLife"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.type == 1}"
                        android:text="@string/life"/>

                    <CheckBox
                        android:id="@+id/cbWork"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.type == 2}"
                        android:text="@string/work"/>

                    <CheckBox
                        android:id="@+id/cbStudy"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.type == 3}"
                        android:text="@string/study"/>

                    <CheckBox
                        android:id="@+id/cbEntertainment"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.type == 4}"
                        android:text="@string/entertainment"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_ececec"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp"/>

                    <CheckBox
                        android:id="@+id/cbHigh"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.priority == 1}"
                        android:text="@string/high"/>

                    <CheckBox
                        android:id="@+id/cbMedium"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.priority == 2}"
                        android:text="@string/medium"/>

                    <CheckBox
                        android:id="@+id/cbLow"
                        style="@style/TodoTagStyle"
                        android:checked="@{todoVM.priority == 3}"
                        android:text="@string/low"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_ececec"/>

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    app:elevation="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvTodo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_ececec"/>

                </com.google.android.material.appbar.AppBarLayout>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</layout>